GN-148 Fix content overflow

--- a/src/Header/Header.module.scss
+++ b/src/Header/Header.module.scss
@@ -125,7 +125,6 @@
     background: rgba(0, 0, 0, 70%);
     display: block;
     left: 0;
-    margin-top: rem($search-height) + rem($nds-spacing-large);
     min-height: 100vh;
     overflow: hidden;
     position: fixed;
